--- a/index.html
+++ b/index.html
@@ -6,38 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Guessing Game</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Port+Lligat+Sans|Princess+Sofia&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <header>
+        <h1>Crystal Quest!</h1>
+    </header>
+    <br><br>
     <div class="container">
-        <div class="row" id="instructions">
-            <h1>Try to land on the number shown below without going over!</h1>
-            <h2>Each of the crystals below has a secret value. Click on the images to increase your score and try to
-                land on the goal!</h2>
+        <div id="instructions">
+            <h2>Try to land on the number shown below without going over!</h2>
+            <h3>Each of the crystals below has a secret value. Click on the images to increase your score and try to
+                land on the goal!</h3>
         </div>
+        <br><br>
         <div class="row">
-            <h3>Your goal is: <span id="current-goal-display"></span></h2>
+            <div class="col-md-6">
+                <h3>Your goal is: <span id="current-goal-display"></span></h2>
+            </div>
+            <div class="col-md-6">
+                <h3>Your current score is: <span id="current-score-display"></span></h2>
+            </div>
         </div>
-        <div class="row">
-            <h3>Your current score is: <span id="current-score-display"></span></h2>
-        </div>
+        <br><br>
         <div class="row" id="counters">
-            <span id="wins-count"></span>
-            <span id="losses-count"></span>
+            <div class="col-md-6" id="wins">
+                <h4>You have won<span id="wins-count"></span> times!</h4>
+            </div>
+            <div class="col-md-6" id="losses">
+                <h4>You have lost<span id="losses-count"></span> times!</h4>
+            </div>
         </div>
     </div>
-    <div class="container" id="crystal-container">
-        <img src="assets/images/crystal1.png" class="crystal-image" id="crystal1">
-        <img src="assets/images/crystal2.png" class="crystal-image" id="crystal2">
-        <img src="assets/images/crystal3.png" class="crystal-image" id="crystal3">
-        <img src="assets/images/crystal4.png" class="crystal-image" id="crystal4">
+    </div>
+    <br><br>
+
+    <div class="row" id="crystal-container">
+        <div class="col-sm-3 col-md-12 col-lg-12 col-xl-12">
+            <img src="assets/images/crystal1.png" class="crystal-image" id="crystal1">
+            <img src="assets/images/crystal2.png" class="crystal-image" id="crystal2">
+            <img src="assets/images/crystal3.png" class="crystal-image" id="crystal3">
+            <img src="assets/images/crystal4.png" class="crystal-image" id="crystal4">
+        </div>
 
     </div>
-    <footer>
-        <a href="https://pngtree.com/free-vectors">free vectors from pngtree.com</a>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span class="text-muted"><a href="https://pngtree.com/free-vectors">free vectors from
+                    pngtree.com</a></span>
+        </div>
     </footer>
 
 </body>
